[package]
name = "pixcil"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
byteorder = "1.4.3"
libflate = "1.2.0"
log = "0.4.17"
pagurus = "0.2"
pagurus_game_std = "0.2"
png = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
