[package]
name = "pixcil"
version = "0.2.0"
edition = "2021"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Pixel art editor"
homepage = "https://github.com/sile/pixcil"
repository = "https://github.com/sile/pixcil"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib", "cdylib"]

[features]
default = ["wasm"]
wasm = ["pagurus_game_std/wasm"]

[dependencies]
byteorder = "1.4.3"
libflate = "1.2.0"
log = "0.4.17"
pagurus = "0.4"
pagurus_game_std = { version = "0.4", default-features = false }
png = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[workspace]
members = [
    "windows",
    "android",
]
