[package]
name = "pixcil_android"
version = "0.2.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
jni = "0.20"
ndk-glue = "0.7"
pagurus = "0.4"
pagurus_android_system = "0.4"
pixcil = { version = "0.2", path = "../", default-features = false }

[package.metadata.android]
apk_name = "pixcil"
resources = "resources"

[package.metadata.android.sdk]
min_sdk_version = 26

[package.metadata.android.application]
label = "Pixcil"
icon = "@mipmap/ic_launcher"
