[package]
name = "pixcil_windows"
version = "0.2.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pagurus = "0.4"
pagurus_windows_system = "0.4"
pixcil = { vesion = "0.2", path = "../", default-features = false }
