[package]
name = "pixcil_windows"
version = "0.3.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pagurus = "0.5"
pagurus_windows_system = "0.5"
pixcil = { version = "0.3", path = "../", default-features = false }
serde_json = "1"

[build-dependencies]
embed-resource = "1.7"

[dependencies.windows]
version = "0.42.0"
features = [
    "Win32_System_Com",
    "Win32_Foundation",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_WindowsAndMessaging",
]
